# network-anomaly-detection

./: .gitignore  README.md  pyproject.toml  setup.sh
deployment/: README.md  lambda_handler.py  requirements.txt  template.yaml
notebooks/: anomaly-detection.ipynb  utils.py
src/network_anomaly_detection/: config.py  utils.py
src/network_anomaly_detection/data/: __init__.py  generation.py
src/network_anomaly_detection/detectors/: __init__.py  cusum.py  isolation_forest.py  pelt.py
src/network_anomaly_detection/pipeline/: __init__.py  ensemble.py
tests/: TEST_DOCUMENTATION.md  conftest.py  test_config.py  test_data_generation.py  test_detectors.py  test_ensemble.py  test_utils.py
