[project]
name = "network-anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricky Wilkes",email = "rickypeterwilkes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pyod (>=2.0.6,<3.0.0)",
    "ipython (>=9.10.0,<10.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ruptures (>=1.1.10,<2.0.0)",
    "adtk (>=0.6.2,<0.7.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
